[package]
name = "herring"
version = "0.1.11"
edition = "2021"
rust-version = "1.80"
license = "MIT OR Apache-2.0"
authors = ["Stephen Rudd <stephen.rudd@nanoporetech.com>"]
description = "CLI for listing recent ENA studies with ONT data"

[dependencies]
idna = "=0.4.0"
url = "=2.4.1"
home = "=0.5.5"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "=0.11.27", default-features = false, features = [
  "json","gzip","brotli","deflate","rustls-tls-native-roots","blocking"
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["clock"] }
percent-encoding = "2"
polars = { version = "=0.43.1", default-features = false, features = ["strings"] }

